atomadic-sra-standalone/test_results.txt
============================= test session starts =============================
platform win32 -- Python 3.11.9, pytest-9.0.2, pluggy-1.6.0 -- C:\Users\sherr\AppData\Local\Programs\Python\Python311\python.exe
cachedir: .pytest_cache
rootdir: C:\Users\sherr\.gemini\antigravity\Atomadic\atomadic-sra-standalone
plugins: anyio-4.12.1
collecting ... collected 9 items

tests/unit/test_hive_bridge_v33.py::TestHiveBridgeFull::test_bridge_discovery PASSED [ 11%]
tests/unit/test_hive_bridge_v33.py::TestHiveBridgeFull::test_get_summary_format PASSED [ 22%]
tests/unit/test_hive_bridge_v33.py::TestHiveBridgeFull::test_math_coverage FAILED [ 33%]
tests/unit/test_hive_bridge_v33.py::TestHiveBridgeFull::test_governance_probes PASSED [ 44%]
tests/unit/test_hive_bridge_v33.py::TestHiveBridgeFull::test_health_probes PASSED [ 55%]
tests/unit/test_hive_bridge_v33.py::TestHiveBridgeFull::test_social_probes PASSED [ 66%]
tests/unit/test_hive_bridge_v33.py::TestHiveAgentAdapterExpanded::test_agent_lifecycle FAILED [ 77%]
tests/unit/test_hive_bridge_v33.py::TestHiveAgentAdapterExpanded::test_breeding FAILED [ 88%]
tests/unit/test_hive_bridge_v33.py::TestAIBridgeV33::test_bridge_v33_id FAILED [100%]

================================== FAILURES ===================================
____________________ TestHiveBridgeFull.test_math_coverage ____________________

self = <test_hive_bridge_v33.TestHiveBridgeFull object at 0x000001FDEB0FDB10>

    def test_math_coverage(self):
        from src.core.hive_bridge import HiveBridge
        bridge = HiveBridge()
        # HD
        v = bridge.hd_from_word("sovereign")
        if v is not None:
            assert len(v) == 10000
>           assert bridge.hd_similarity(v, v) > 0.99
E           assert 0.0016 > 0.99
E            +  where 0.0016 = hd_similarity(array([-1, -1,  1, ...,  1,  1, -1], shape=(10000,), dtype=int8), array([-1, -1,  1, ...,  1,  1, -1], shape=(10000,), dtype=int8))
E            +    where hd_similarity = <src.core.hive_bridge.HiveBridge object at 0x000001FDEB1BF850>.hd_similarity

tests\unit\test_hive_bridge_v33.py:43: AssertionError
______________ TestHiveAgentAdapterExpanded.test_agent_lifecycle ______________

self = <test_hive_bridge_v33.TestHiveAgentAdapterExpanded object at 0x000001FDEB0FF650>

    def test_agent_lifecycle(self):
        from src.agents.hive_agent_adapter import HiveAgentAdapter
        adapter = HiveAgentAdapter()
        if not adapter.available:
            pytest.skip("HelixHive Agent module not available")
    
        # Create
        summary = adapter.create_agent("Researcher", "Find the truth.")
>       assert summary is not None
E       assert None is not None

tests\unit\test_hive_bridge_v33.py:86: AssertionError
------------------------------ Captured log call ------------------------------
WARNING  src.agents.hive_agent_adapter:hive_agent_adapter.py:110 [HiveAgentAdapter] create_agent failed: Leech coset leader table not found at leech_coset_leaders.npy. Please generate it offline using the provided script or download the pre\u2011computed file from the HelixHive repository.
_________________ TestHiveAgentAdapterExpanded.test_breeding __________________

self = <test_hive_bridge_v33.TestHiveAgentAdapterExpanded object at 0x000001FDEB0FFC90>

    def test_breeding(self):
        from src.agents.hive_agent_adapter import HiveAgentAdapter
        adapter = HiveAgentAdapter()
        if not adapter.available:
            pytest.skip("HelixHive Agent module not available")
    
        p1 = adapter.create_agent("A", "Prompt A")
        p2 = adapter.create_agent("B", "Prompt B")
    
>       child = adapter.breed_agents(p1["agent_id"], p2["agent_id"], new_role="C")
                                     ^^^^^^^^^^^^^^
E       TypeError: 'NoneType' object is not subscriptable

tests\unit\test_hive_bridge_v33.py:116: TypeError
------------------------------ Captured log call ------------------------------
WARNING  src.agents.hive_agent_adapter:hive_agent_adapter.py:110 [HiveAgentAdapter] create_agent failed: Leech coset leader table not found at leech_coset_leaders.npy. Please generate it offline using the provided script or download the pre\u2011computed file from the HelixHive repository.\nWARNING  src.agents.hive_agent_adapter:hive_agent_adapter.py:110 [HiveAgentAdapter] create_agent failed: Leech coset leader table not found at leech_coset_leaders.npy. Please generate it offline using the provided script or download the pre\u2011computed file from the HelixHive repository.
_____________________ TestAIBridgeV33.test_bridge_v33_id ______________________

self = <test_hive_bridge_v33.TestAIBridgeV33 object at 0x000001FDEB10C510>

    def test_bridge_v33_id(self):
>       from src.core.ai_bridge import AIBridge
E         File "C:\Users\sherr\.gemini\antigravity\Atomadic\atomadic-sra-standalone\src\core\ai_bridge.py", line 176
E           print(f"[AIBridge] HelixHive Expansion: {self.hive.get_summary().replace('\n', ' | ')}")
E                                                                                                  ^
E       SyntaxError: f-string expression part cannot include a backslash

tests\unit\test_hive_bridge_v33.py:125: SyntaxError
============================== warnings summary ===============================
tests/unit/test_hive_bridge_v33.py::TestHiveBridgeFull::test_bridge_discovery
  C:\\Users\\sherr\\.gemini\\antigravity\\Atomadic\\atomadic-sra-standalone\\HelixHive-main\\memory.py:380: UserWarning: Leech coset leader table not found at leech_coset_leaders.npy. Please generate it offline using the provided script or download the pre\u2011computed file from the HelixHive repository.\n    warnings.warn(str(e))

-- Docs: https://docs.pytest.org/en/stable/how-to/capture-warnings.html
=========================== short test summary info ===========================
FAILED tests/unit/test_hive_bridge_v33.py::TestHiveBridgeFull::test_math_coverage
FAILED tests/unit/test_hive_bridge_v33.py::TestHiveAgentAdapterExpanded::test_agent_lifecycle
FAILED tests/unit/test_hive_bridge_v33.py::TestHiveAgentAdapterExpanded::test_breeding
FAILED tests/unit/test_hive_bridge_v33.py::TestAIBridgeV33::test_bridge_v33_id
=================== 4 failed, 5 passed, 1 warning in 0.89s ====================
